--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/prebuild-config": "~7.0.0",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "eas": "^0.1.0",
+    "eas-cli": "^12.5.1",
     "expo": "^51.0.34",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -32,17 +36,18 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "ldrs": "^1.0.2",
-    "lottie-react-native": "^7.0.0",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.75.3",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
@@ -57,7 +62,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
